fix(regtime): fix issue where rows would jump slightly when navigating
closes: #2816

--- a/src/styles/specifics/timetracking/regtime/__regtime.sass
+++ b/src/styles/specifics/timetracking/regtime/__regtime.sass
@@ -284,12 +284,13 @@ button.normal
 
 .compactcells
     td, th
-        padding: pxToRem(3) pxToRem(4) 0 pxToRem(4)
+        padding-left: pxToRem(4)
+        padding-right: pxToRem(4)
         margin: 0
 
     td.ctoa
         color: $uni-color-c2a
-        
+
     td.good
         color: $uni-color-good
 
